Atualizado .gitignore para Python + Node.js

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,53 @@
-# Arquivos do sistema
+# === Node.js ===
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dist/
+build/
+.env
+
+# === Python ===
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.pyc
+*.pdb
+*.egg
+*.egg-info/
+.eggs/
+.Python
+env/
+venv/
+ENV/
+ENV.bak/
+*.sqlite3
+db.sqlite3
+
+# === Sistema operativo ===
 .DS_Store
 Thumbs.db
 
-# Pastas ocultas
-node_modules/
-dist/
-.env
+# === VSCode/IDE ===
 .vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
 
-# Logs
+# === Testes ===
+coverage/
+htmlcov/
+*.cover
 *.log
+.pytest_cache/
+.tox/
+.cache/
+nosetests.xml
+test-results.xml
 
-# Backup temporários
+# === Outros ===
 *.bak
 *.tmp
+*.swp
+*.log
